Update in README.md, updated paths using the here package.

--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,8 @@ Scripts/QGIS/
 Fieldwork/
 Presentations/
 StudyMaterialAndLiterature/
+.Rproj.user/
 
 # files
 *.Rhistory
+Scripts/Processing/ExploreRasterData.R
