--- a/.gitignore
+++ b/.gitignore
@@ -7,9 +7,9 @@ StudyMaterialAndLiterature/
 .Rproj.user/
 
 # specific output directory
-!data/
-data/*
-!data/gjamTime_outputs
+data/
+!data/*
+data/gjamTime_outputs
 
 # files
 *.Rhistory
