ignore data/gjamTime_outputs

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
 # directories
 Admin/
+data/
 Scripts/QGIS/
 Fieldwork/
 Presentations/
@@ -7,8 +8,8 @@ StudyMaterialAndLiterature/
 .Rproj.user/
 
 # specific output directory
-data/*
-!data/gjamTime_outputs/
+# data/*
+# !data/gjamTime_outputs/
 
 # files
 *.Rhistory
